==========================
DictionaryReader Changelog
==========================

Feb 12 2007  Guenther Noack
	* AppController.[mh]:
	* */DictionaryReader.gorm, */DictionaryReader.nib:
	* Resources/etoile_[forward|back].tiff:
	Finished Quentin's toolbar code.
	
Feb 11 2007  Guenther Noack
	* AppController.m: Made service method non-blocking
	* DictionaryReaderInfo.plist: "=" keyboard shortcut for service
	* AppController.[mh]: Auto-show the window when the application
	  icon is clicked.

Feb 08 2007  Quentin Mathe
	* AppController.m: Added toolbar code (not yet enabled) to replace the 
	actual top bar. This represents early work to streamline UI in relation 
	to other Etoile applications.

Nov 26 2006  Guenther Noack
	* everywhere: Better assertions, wrote awakeFromNib in preferences
	  controller.
	* UKNibOwner.[mh]: Copied UKNibOwner over to DictionaryReader to make
	  a compilation without Etoile possible. When compiling on Etoile,
	  the application will still be linked to EtoileFoundation instead.

Nov 24 2006  Guenther Noack
	* GNUmakefile: Made the inclusion of etoile.make 'weak' (it doesn't
	  fail any more when it's not present)

Nov 15 2006  Quentin Mathe
	* GNUmakefile: Updated to include etoile.make, this allows the project
	  to compile without installing EtoileFoundation first.

Nov 07 2006  Yen-Ju Chen
	* GNUmakefile, Preferences.h: Use EtoileFoundation instead deprecated 
	  EtoileExtension.
	* HistoryManager.m: return self in -init to avoid memory leak.

Oct 15 2006  Guenther Noack
	* Bug #7379 hopefully fixed. Forgot to "svn add" some files... :-/
	* Thanks for the bugreport to YunSong Hwang :-)
	* Commented out the [dict close] line in AppController (that slowed
	  down the lookup times and it's still consistent now)

Oct 9 2006  Guenther Noack
	* Preference panel works now
	* Support for GZipped (.dz extension) dictionaries (GNUstep only!)

Oct ? 2006  Guenther Noack
	* Preference panel for choosing dictionaries