@@ -2,6 +2,10 @@
 DictionaryReader Changelog
 ==========================
 
+Feb 19 2007  Guenther Noack
+	* Create ~/GNUstep/Library/DictionaryReader/ if it does not exist.
+	* Use host name for property list since NSHost is not a property list.
+
 Feb 12 2007  Guenther Noack
 	* AppController.[mh]:
 	* */DictionaryReader.gorm, */DictionaryReader.nib:
